# nextraci

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RELEASING.md  SPEC.md  action.yml  charter.schema.json  pyproject.toml
.claude/agents/: coder.md  orchestrator.md  qa.md  reviewer.md  writer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  rule_or_feature.md
.github/workflows/: ci.yml  publish.yml
agenraci/: __init__.py  cli.py  linter.py  loader.py  schema.py
agenraci/adapters/: __init__.py  claude_code.py  github.py  humanlayer.py  langgraph.py
agenraci/templates/: charter.template.yaml
docs/: why-agenraci.md  why-nextraci.md
docs/cookbook/: from-agents-to-a-charter.md
docs/demo/: README.md  charter-broken.yaml  demo.tape
docs/launch/: README.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  show-hn.md  social.md
docs/playground/: index.html
examples/agent-review-gate/: README.md  charter.yaml
examples/blog/: README.md  charter.yaml
examples/hello-world/: README.md  charter.yaml
examples/relay/: README.md  charter.yaml
examples/sprout/: README.md  charter.yaml
governance/: charter.yaml
nextraci/: __init__.py  cli.py  linter.py  loader.py  schema.py
nextraci/adapters/: __init__.py  humanlayer.py  langgraph.py
templates/: charter.template.yaml
tests/: test_cli.py  test_compile.py  test_linter.py  test_schema.py
tests/fixtures/: bad_r1.yaml  bad_r2.yaml  bad_r2_dead.yaml  bad_r3.yaml  bad_r4.yaml  bad_r4_route.yaml  bad_r5.yaml  good_minimal.yaml
